@@ -69,6 +69,8 @@
         <configuration>
           <argLine>
             -Ddk.netarkivet.settings.file=tests/dk/netarkivet/test-settings.xml
+            --add-opens=java.base/java.lang=ALL-UNNAMED
+            --add-opens=java.base/java.util=ALL-UNNAMED
           </argLine>
         </configuration>
       </plugin>
